# Helix

./: .gitignore  README.md
config/: engine.yaml  gateway.yaml  latency_fit.json  strategy.yaml  symbols.json  venue_rules.yaml
cpp_engine/: CMakeLists.txt
cpp_engine/include/engine/: decision_engine.hpp  deterministic_hash.hpp  event_bus.hpp  feature_engine.hpp  fee_model.hpp  latency.hpp  maker_queue.hpp  matching_engine.hpp  order_manager.hpp  order_utils.hpp  recorder.hpp  risk_engine.hpp  rules_engine.hpp  tick_replay.hpp  types.hpp
cpp_engine/include/transport/: grpc_server.hpp  messages.hpp  zmq_server.hpp
cpp_engine/include/utils/: logger.hpp  ring_buffer.hpp  time.hpp
cpp_engine/src/: decision_engine.cpp  event_bus.cpp  feature_dump.cpp  feature_engine.cpp  fee_model.cpp  main.cpp  maker_queue.cpp  matching_engine.cpp  order_manager.cpp  recorder.cpp  risk_engine.cpp  rules_engine.cpp  tick_replay.cpp  transport_servers.cpp
cpp_engine/tests/: test_adv_selection.cpp  test_crossing_classification.cpp  test_crossing_equals_taker.cpp  test_depth_behaviour.cpp  test_deterministic_hash.cpp  test_exec_cost_identity.cpp  test_features.cpp  test_fee_exactness_smoke.cpp  test_fee_split.cpp  test_latency_causality.cpp  test_maker_queue.cpp  test_maker_trades.cpp  test_match.cpp  test_matching_conservation.cpp  test_matching_fuzz.cpp  test_order_lifecycle.cpp  test_pnl_bookkeeping.cpp  test_replay.cpp  test_rules_fee.cpp  test_rules_normalization.cpp  test_rules_rounding_direction.cpp  test_terminal_order_never_fills.cpp
cpp_engine/tests/data/: bad_negative_qty.csv  bad_seq_gap.csv  bookcheck_sample.csv
data/replay/: bad_gap.csv  bad_gap_seq.csv  btc_l2.csv  btc_l2.meta.json  btc_l2_mini.csv  btc_trades.csv  btc_trades_mini.csv  btc_trades_test.csv  bybit_btcusdt.csv  bybit_l2.csv  bybit_l2.meta.json  bybit_l2_bookcheck.csv  bybit_ws.csv  rec_bookcheck.csv  replay_bookcheck.csv  synthetic.csv
features/: README.md  feature_base.h  feature_registry.h  feature_spec.h
features/backs/: imbalance_l1.h
gateway/: go.mod
gateway/cmd/bookcheck_from_csv/: main.go
gateway/cmd/bybit_recorder/: main.go
gateway/cmd/bybit_trades_http_recorder/: main.go
gateway/cmd/bybit_trades_recorder/: main.go
gateway/cmd/gateway/: main.go
gateway/pkg/executor/: ack_handler.go  fill_handler.go  order_sender.go
gateway/pkg/latency/: clock.go  profiler.go
gateway/pkg/orderbook/: depth_merge.go  orderbook.go
gateway/pkg/router/: fee_model.go  smart_router.go
gateway/pkg/transport/: messages.go  zmq_pub.go  zmq_sub.go
gateway/pkg/ws/: binance_public.go  bybit_private.go  bybit_public.go  ws_router.go
gateway/tests/: orderbook_test.go  ws_test.go
python_strategy/: __init__.py  runner.py
python_strategy/features/: __init__.py  feature_builder.py  microstructure.py  orderflow.py
python_strategy/model/: __init__.py  loader.py  predict.py
python_strategy/research/: __init__.py  condexp.py  response.py  table.py
python_strategy/strategies/: base_strategy.py  mean_reversion.py  microtrend.py
python_strategy/transport/: __init__.py  grpc_client.py  zmq_client.py
runs/book_dbg/: metrics.json
runs/gate9_check_maker/: metrics.json
runs/gate9_check_taker/: fills.csv  metrics.json
runs/gate9_latseed/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_maker_demo/: metrics.json
runs/gate9_maker_demo_http10/: latency_samples.csv  metrics.json
runs/gate9_maker_demo_http10_b/: metrics.json
runs/gate9_maker_demo_http10_c/: fills.csv  metrics.json
runs/gate9_maker_demo_http10_d/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_maker_demo_http10_e/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_maker_demo_http10_f/: fills.csv  metrics.json
runs/gate9_maker_demo_http10_h/: fills.csv  metrics.json
runs/gate9_maker_demo_r1/: fills.csv  metrics.json
runs/gate9_maker_hiA/: metrics.json
runs/gate9_maker_hiB/: fills.csv  metrics.json
runs/gate9_no_actions/: metrics.json
runs/gate9_no_actions_http/: metrics.json
runs/gate9_no_actions_http10/: metrics.json
runs/gate9_no_actions_r1/: metrics.json
runs/gate9_taker_demo/: fills.csv  metrics.json
runs/gate9_taker_demo_http/: fills.csv  metrics.json
runs/gate9_taker_demo_http10/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_taker_demo_http10_b/: metrics.json
runs/gate9_taker_demo_r1/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_taker_hiA/: fills.csv  latency_samples.csv  metrics.json
runs/gate9_taker_hiB/: metrics.json
runs/mini_maker_probe/: fills.csv  metrics.json
runs/mini_maker_probe2/: fills.csv  metrics.json
runs/mini_taker_probe/: latency_samples.csv  metrics.json
runs/run_1766244221294_53713/: fills.csv  metrics.json
runs/run_1766244252255_418202/: fills.csv  metrics.json
runs/run_1766296251385_619503/: fills.csv  metrics.json
runs/run_1766296740202_893855/: fills.csv  metrics.json
runs/run_1766300960835_890616/: metrics.json
runs/run_1766300988322_440958/: metrics.json
runs/run_1766301018318_134474/: metrics.json
scripts/: bookcheck_diff.py  bybit_gui.py  bybit_streamlit.py  gate9_check.py  latency_fit.py  run_condexp.py  run_summary.py  start_engine.sh  start_gateway.sh  start_strategy.sh  sync_data.sh
